--- a/scss/modules/_card.scss
+++ b/scss/modules/_card.scss
@@ -21,7 +21,7 @@
   }
 
   @media #{$break--m} {
-    max-width: em(600px);
+    max-width: initial;
   }
 
   @include m(white-col) {
@@ -139,26 +139,26 @@
   }
 }
 
-@keyframes slideRight {
-  0% {
-    transform: translateX(-600px);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
+// @keyframes slideRight {
+//   0% {
+//     transform: translateX(-600px);
+//   }
+//   50% {
+//     transform: scale(1.1);
+//   }
+//   100% {
+//     transform: translateX(0);
+//   }
+// }
 
-@keyframes slideLeft {
-  0% {
-    transform: translateX(600px);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
+// @keyframes slideLeft {
+//   0% {
+//     transform: translateX(600px);
+//   }
+//   50% {
+//     transform: scale(1.1);
+//   }
+//   100% {
+//     transform: translateX(0);
+//   }
+// }
