--- a/css/styles.css
+++ b/css/styles.css
@@ -415,6 +415,28 @@ button {
   }
 }
 
+@keyframes slideRight {
+  0% {
+    transform: translateX(-600px);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes slideLeft {
+  0% {
+    transform: translateX(600px);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 .footer {
   padding: 2em;
   text-align: center;
